# fastapi_failure

./: app.py  pyproject.toml  run_server.sh  run_test.py  server_test.py
