[tool.poetry]
name = "fastapi-testing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_testing"}]

[tool.poetry.dependencies]
python = "3.9.16"
fastapi = "^0.95.1"
numpy = "^1.24.2"
uvicorn = "^0.21.1"
gunicorn = "^20.1.0"
requests = "^2.28.2"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
